modal_style.css
/* Button to open modal */
.button {
    border: none;
    background: none;
    cursor: pointer;
    margin: 10px;
    transition: 0.8s;
    position: relative;
    overflow: hidden;
    color: white;
    outline: none;
}

/* Button to open modal on hover */
.button:hover {
    -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
    box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
    background-color: rgb(245, 245, 255);
    cursor: pointer;
    transform: scale(1.03);
}

/* Modal window */
.modal {
    color: black;
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
    animation-name: modalopen;
    animation-duration: 1s;
}

/* Modal content */
.modal-content {
    background-color: #f4f4f4;
    /*margin: 10% auto;*/
    width: 56% auto;
    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17);
    position: absolute;
    float: left;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

/* Modal header */
.modal-header{
    background: rgb(184, 184, 212);
    padding: 15px;
    color: white;
}

/* Modal header content */
.modal-header h2{
    margin: 0;
}

/* Modal body content */
.modal-body {
    padding: 20px;
    text-align: center;
}

#show-scene {
    height: 75%;
    width: 120%;
    overflow: hidden;
    display: flex;
    justify-content: space-between;
    background-color: white;
}

.show-scene-wrap {
    width: 100%;
    height: 100%;
    display: flex;
    background-color: white;
}

/* Modal footer */
.modal-footer {
    background: rgb(184, 184, 212);
    padding: 10px;
    color: white;
    text-align: center;
}

/* Exit button */
.closeBtn {
    color: white;
    float: right;
    font-size: 30px;
}

/* Exit button on hover and focus */
.closeBtn:hover, .closeBtn:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

/* Buttons to delete and edit modal info from modal window */
#deleteBtn, #editBtn {
    color: black;
}

/* Modal opening */
@keyframes modalopen {
    from{opacity : 0}
    to{opacity: 1}
}

/* Algorithm edit info modal OK button fix */
#conf3 {
    margin-top: 5%;
}

/* Dialog window to edit info about a container fix */
#dialog-edit-container-footer {
    padding: 15px;
}

/* Modal for adding algorithms size fix */
#dialog-alg-add-content {
    max-width: 42%;
    min-width: 42%;
}

#conf1 {
    margin-top: 5%;
}

/* Every user input line */
.input-str {
    font-size: 20px;
    font-family: Arial;
    min-width: 90%;
    display: inline-block;
    margin-top: 2%;
    width: 60%;
    margin-left: 5%;
    margin-right: 5%;
}

/* Modal for showing info about algorithm fix */
#modal-alg-info-content {
    max-width: 42%;
    min-width: 42%;
}

/* Modal for adding container fix */
#add-container-modal-content {
    max-width: 42%;
    min-width: 42%;
}

#conf {
    margin-top: 5%;
}

